<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/menu_layout_height"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/registered_back"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/contentDescription"
            android:scaleType="centerInside"
            android:src="@drawable/icon_back_p" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="50dp"
            android:text="@string/menu_registered"
            android:textColor="@color/text_color"
            android:textSize="@dimen/menu_textSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="@dimen/editText_layout_margin"
        android:layout_marginRight="@dimen/editText_layout_margin"
        android:layout_marginTop="@dimen/editText_layout_margin"
        android:background="@drawable/inputbox_n"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/contentDescription"
            android:scaleType="fitStart"
            android:src="@drawable/icon_lock" />

        <EditText
            android:id="@+id/registered_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:height="@dimen/editText_height"
            android:hint="@string/editText_registered_phone"
            android:inputType="phone"
            android:textColor="@color/text_color"
            android:width="@dimen/editText_width" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="@dimen/editText_layout_margin"
        android:layout_marginRight="@dimen/editText_layout_margin"
        android:layout_marginTop="@dimen/editText_layout_margin"
        android:background="@drawable/inputbox_n"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/contentDescription"
            android:scaleType="fitStart"
            android:src="@drawable/icon_unlock" />

        <EditText
            android:id="@+id/registered_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:height="@dimen/editText_height"
            android:hint="@string/editText_registered_pswd"
            android:inputType="textPassword"
            android:textColor="@color/text_color"
            android:width="@dimen/editText_width" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="@dimen/editText_layout_margin"
        android:layout_marginRight="@dimen/editText_layout_margin"
        android:layout_marginTop="@dimen/editText_layout_margin"
        android:background="@drawable/inputbox_n"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/contentDescription"
            android:scaleType="fitStart"
            android:src="@drawable/icon_unlock" />

        <EditText
            android:id="@+id/registered_confirm_psd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:height="@dimen/editText_height"
            android:hint="@string/editText_registered_rpswd"
            android:inputType="textPassword"
            android:textColor="@color/text_color"
            android:width="@dimen/editText_width" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="@dimen/editText_layout_margin"
        android:layout_marginRight="@dimen/editText_layout_margin"
        android:layout_marginTop="50dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/registered_regist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/btn_n"
            android:text="@string/btn_registered"
            android:textColor="@color/btn_unpress_color" />
    </LinearLayout>

</LinearLayout>