<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/logo_marginTop"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/logo_layout_height"
            android:contentDescription="@string/contentDescription"
            android:scaleType="centerInside"
            android:src="@drawable/logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="@dimen/editText_layout_margin"
        android:layout_marginRight="@dimen/editText_layout_margin"
        android:background="@drawable/inputbox_n"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/lock_pic_marginLeft"
            android:contentDescription="@string/contentDescription"
            android:scaleType="fitStart"
            android:src="@drawable/icon_phone" />

        <EditText
            android:id="@+id/login_phone"
            android:layout_width="@dimen/login_editText_widht"
            android:layout_height="@dimen/login_editText_height"
            android:background="@null"
            android:ems="10"
            android:layout_gravity="center_vertical"
            android:height="@dimen/editText_height"
            android:width="@dimen/editText_width" 
            android:hint="@string/editText_login_phone_hint"
            android:inputType="phone"
            android:textColor="@color/text_color"
             >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="@dimen/editText_layout_margin"
        android:layout_marginRight="@dimen/editText_layout_margin"
        android:layout_marginTop="@dimen/editText_layout_margin"
        android:background="@drawable/inputbox_n"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/lock_pic_marginLeft"
            android:contentDescription="@string/contentDescription"
            android:scaleType="fitStart"
            android:src="@drawable/icon_lock" />

        <EditText
            android:id="@+id/login_pswd"
            android:layout_width="@dimen/login_editText_widht"
            android:layout_height="@dimen/login_editText_height"
            android:height="@dimen/editText_height"
            android:width="@dimen/editText_width" 
            android:hint="@string/editText_login_pswd_hint"
            android:inputType="textPassword"
            android:background="@null"
            android:layout_gravity="center_vertical"
            android:textColor="@color/text_color" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="@dimen/editText_layout_margin"
        android:layout_marginRight="@dimen/editText_layout_margin"
        android:layout_marginTop="50dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/login_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/btn_n"
            android:text="@string/btn_login"
            android:textColor="@color/btn_unpress_color" />
    </LinearLayout>
    <!-- 忘记密码、注册新用户 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="@dimen/editText_layout_margin"
        android:layout_marginRight="@dimen/editText_layout_margin"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:paddingLeft="20dp" >

        <Button
            android:id="@+id/login_forgetpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:layout_marginLeft="50dp"
            android:text="@string/login_link_forgetpswd"
            android:textColor="@color/text_color" />

        <Button
            android:id="@+id/login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="#00000000"
            android:text="@string/login_link_registered"
            android:textColor="@color/text_color" />
    </LinearLayout>

</LinearLayout>