<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/title_actionbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="@dimen/editText_layout_margin"
        android:layout_marginRight="@dimen/editText_layout_margin"
        android:layout_marginTop="@dimen/editText_layout_margin"
        android:background="@drawable/inputbox_n"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/contentDescription"
            android:scaleType="fitStart"
            android:src="@drawable/icon_lock" />

        <EditText
            android:id="@+id/change_psd_oldpswd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:height="@dimen/editText_height"
            android:hint="@string/editText_forgetpswd_oldpswd_hint"
            android:inputType="textPassword"
            android:textColor="@color/text_color"
            android:width="@dimen/editText_width" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="@dimen/editText_layout_margin"
        android:layout_marginRight="@dimen/editText_layout_margin"
        android:layout_marginTop="@dimen/editText_layout_margin"
        android:background="@drawable/inputbox_n"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/contentDescription"
            android:scaleType="fitStart"
            android:src="@drawable/icon_unlock" />

        <EditText
            android:id="@+id/change_psd_newpswd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:height="@dimen/editText_height"
            android:hint="@string/editText_forgetpswd_newpswd_hint"
            android:inputType="textPassword"
            android:textColor="@color/text_color"
            android:width="@dimen/editText_width" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="@dimen/editText_layout_margin"
        android:layout_marginRight="@dimen/editText_layout_margin"
        android:layout_marginTop="@dimen/editText_layout_margin"
        android:background="@drawable/inputbox_n"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/contentDescription"
            android:scaleType="fitStart"
            android:src="@drawable/icon_unlock" />

        <EditText
            android:id="@+id/change_psd_confirmpswd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:height="@dimen/editText_height"
            android:hint="@string/editText_forgetpswd_rnewpswd_hint"
            android:inputType="textPassword"
            android:textColor="@color/text_color"
            android:width="@dimen/editText_width" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="@dimen/editText_layout_margin"
        android:layout_marginRight="@dimen/editText_layout_margin"
        android:layout_marginTop="50dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/change_psd_commit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/btn_n"
            android:text="确定"
            android:textColor="@color/btn_unpress_color" />
    </LinearLayout>

</LinearLayout>