
<!--/*
**	侧滑菜单布局文件
**  	其他页面需要侧滑菜单时，复制此布局，
**		并修改 116 行开始的自定相对布局内的内容即可
*/-->
<com.star.layout.view.DragLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/setting_bg"
        android:paddingBottom="30dp"
        android:paddingEnd="30dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingStart="30dp"
        android:paddingTop="50dp" >

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/iv_user_photo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/contentDescription"
                android:src="@drawable/btn_smail_n" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:id="@+id/ll_uinfo_top"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/tv_uname_top_left"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="China-Lee"
                        android:textColor="#FFFFFF"
                        android:textSize="22sp" />

                    <ImageView
                        android:id="@+id/iv_ulevel_top_right"
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:contentDescription="@string/contentDescription"
                        android:src="@drawable/icon_star" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_uremark_top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ll_uinfo_top"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:text="寻找属于自己的星星"
                    android:textColor="@color/textViewSub"
                    android:textSize="12sp" />
            </RelativeLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_setting_icon_bottom"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/contentDescription"
            android:src="@drawable/icon_setting" />

        <TextView
            android:id="@+id/tv_setting_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_toRightOf="@id/iv_setting_icon_bottom"
            android:layout_toEndOf="@id/iv_setting_icon_bottom"
            android:text="@string/action_settings"
            android:textColor="@color/textView"
            android:textSize="18sp" />

        <ListView
            android:id="@+id/lv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/tv_setting_bottom"
            android:layout_below="@id/ll1"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="20dp"
            android:cacheColorHint="#00000000"
            android:divider="@null"
            android:textColor="@color/textView" />
    </RelativeLayout>

    <!-- 此处即为关闭菜单时显示的内容。 -->
    <com.star.layout.view.MyRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/bg"
            android:cacheColorHint="#00000000"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <ImageView
                android:id="@+id/iv_logo_mini_c"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="50dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/logo" />

            <EditText
                android:id="@+id/et_uname_c"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/inputbox_n"
                android:hint="@string/hint_login_username"
                android:inputType="textEmailAddress"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColor="@color/textView"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_pwd_c"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/inputbox_n"
                android:hint="@string/hint_login_password"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColor="@color/textView"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_login_c"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/btn_n"
                android:text="@string/btn_ok"
                android:textColor="@color/textView"
                android:textSize="20sp" />
        </LinearLayout>
    </com.star.layout.view.MyRelativeLayout>

</com.star.layout.view.DragLayout>